--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 
 				<article class="article">
 					<header>
-						<h1><a href="qing/Metasploit-10.html" title="[Metasploit]-10-使用msfconsole代替msf控制台语句"  target="_blank">[Metasploit]-10-使用msfconsole代替msf控制台语句</a></h1>
+						<h1><a href="Cat/Metasploit-10.html" title="[Metasploit]-10-使用msfconsole代替msf控制台语句"  target="_blank">[Metasploit]-10-使用msfconsole代替msf控制台语句</a></h1>
 					</header>
 					<section>
 						<p>在前面的文章中，我们完成一次渗透操作，需要在msf控制台中中输入多条语句，这样的方式在对单台机器实现渗透时比较常用，如果是同时对几百台几万台机器发起批量渗透测试，那么那种方式就会很费时费力，本文介绍了一种新的方法，使用msfconsole一句话代替msf控制台多条语句的执行，在批量渗透中十分好用。</p>
-						<a href="qing/Metasploit-10.html" title="[Metasploit]-10-使用msfconsole代替msf控制台语句"  target="_blank">阅读全文...</a>
+						<a href="Cat/Metasploit-10.html" title="[Metasploit]-10-使用msfconsole代替msf控制台语句"  target="_blank">阅读全文...</a>
 					</section>
 					<footer>
 						<label>发布时间</label>
@@ -76,11 +76,11 @@
 
 				<article class="article">
 					<header>
-						<h1><a href="qing/Metasploit-9.html" title="[Metasploit]-9-利用Windows远程桌面功实现Payload后门"  target="_blank">[Metasploit]-9-利用Windows远程桌面功实现Payload后门</a></h1>
+						<h1><a href="Cat/Metasploit-9.html" title="[Metasploit]-9-利用Windows远程桌面功实现Payload后门"  target="_blank">[Metasploit]-9-利用Windows远程桌面功实现Payload后门</a></h1>
 					</header>
 					<section>
 						<p>在Windows远程桌面界面中，集成了一些系统辅助功能，这些功能包含"屏幕键盘"、"放大镜"、"讲述人"等，微软将这些功能集成在登录界面里面本来是为了方便使用者，而这些程序无需用户登录就能执行，这样的设计就会让一些程序有机可乘，只要替换了其中某一个程序，就能绕过登录，直接启动替换后的程序。</p>
-						<a href="qing/Metasploit-9.html" title="[Metasploit]-9-利用Windows远程桌面功实现Payload后门"  target="_blank">阅读全文...</a>
+						<a href="Cat/Metasploit-9.html" title="[Metasploit]-9-利用Windows远程桌面功实现Payload后门"  target="_blank">阅读全文...</a>
 					</section>
 					<footer>
 						<label>发布时间</label>
@@ -138,8 +138,8 @@
 				<div class="recommend">
 					<h2>推荐 <span class="eng-h">/Recom</span></h2>
 					<ul>
-						<li><a href="qing/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建"  target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
-						<li><a href="qing/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
+						<li><a href="Cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建"  target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
+						<li><a href="Cat/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
