--- a/Cat/templet.html
+++ b/Cat/templet.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
-<!--Copyright©QingSword.COM︻☼1010D>-->
-<!--Copyright©X.QingSword.COM︻☼1010D>-->
+<!--(^･ｪ･^)--Copyright©NikkoCat.COM--ฅ•ω•ฅ-->
 <html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
+	<!--(^･ｪ･^)--google和firefox支持良好--ฅ•ω•ฅ-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
-	<meta name="keywords" content="晴刃,晴,qing,qingsword,ccna图文笔记,ubuntu,linux,ubuntu server,mysql,python,计算机技术博客,渗透测试,kali渗透测试,kali,kali web渗透,kali主机渗透,kali无线渗透,metasploit,白帽子测试">
-	<meta name="keywords" content="晴刃,晴,qing,qingsword,ccna图文笔记,ubuntu,linux,ubuntu server,mysql,node.js,javascript,python,计算机技术博客">
-	<meta name="author" content="x.qingsword.com">
-	<title>标题 - X.QingSword.COM</title>
-	<link rel="shortcut icon" type="image/x-icon" href="../logo/favicon.ico">
-	<link rel="stylesheet" type="text/css" href="../css/basic.css">
-	<link rel="stylesheet" type="text/css" href="../css/text.css">
-	<!-- 代码块高亮js -->
-	<link type="text/css" rel="stylesheet" href="../plugins/SyntaxHighlighter/styles/shCore.css"/>
-	<link type="text/css" rel="stylesheet" href="../plugins/SyntaxHighlighter/styles/shThemeRDark.css"/>
-	<script type="text/javascript" src="../plugins/SyntaxHighlighter/scripts/shCore.js"></script>
-	<script type="text/javascript" src="../plugins/SyntaxHighlighter/scripts/shBrushBash.js"></script>
-	<script type="text/javascript">
-	SyntaxHighlighter.all();
-	</script>
+	<meta name="description" content="NikkoCat,阳光猫小黑,会定期分享好玩的Windows|Linux|MacOS系统操作技巧,实用的软件推荐,系统漏洞防御方法,办公自动化,能够提高日常工作效率的小技巧,通过网络赚钱的思路等...">
+	<meta name="author" content="NikkoCat.COM">
+	<meta name="keywords" content="NikkoCat,nikkocat,阳光猫小黑,阳光猫,Windows操作技巧,Linux操作技巧,MacOS操作技巧,软件推荐,Windows软件推荐,Linux软件推荐,MacOS软件推荐,漏洞修复,工作效率提升,自动化办公,office技巧,PPT模板,python全自动办公,系统激活,Windows系统激活,新手学电脑,小白学电脑,电脑小白">
+	<title>NikkoCat - 阳光猫小黑 - WWW.NikkoCat.COM</title>
+	<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.png">
+	<link rel="stylesheet" type="text/css" href="css/basic.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
 <body>
 	<!--header -->
 	<header id="nav">
 			<div class="nav-container"> 
 				<!-- 根大纲-->
-				<a href="http://x.qingsword.com" title="晴刃">
-					<h1 class="nav-logo">晴刃</h1>
+				<a href="https://www.nikkocat.com" title="阳光猫小黑">
+					<h1 class="nav-logo">阳光猫小黑</h1>
 				</a>
 				<h2 class="nav-site-description desc-hidden">
-					He lies somewhere here
+					阳光猫小黑
 				</h2>
 				<nav class="nav-links"> 
 					<!-- nav连接大纲-->
 					<h1 style="display:none;">网站导航</h1> 
 					<ul>
-						<li  class="active li-hidden">
-							<a href="../index.html" title="home">
-								<span class="link-word"><img src="../logo/home.png" alt="home" class="link-img">首页</span>
+						<li class="active li-hidden">
+							<a href="index.html" title="home">
+								<span class="link-word"><img src="logo/home.png" alt="home" class="link-img"><span class="word-hidden">首页</span></span>
 							</a>
 						</li>
 						<li class="li-hidden">
-							<a href="../pt.html" title="pt">
-								<span class="link-word"><img src="../logo/linux.png" alt="pt" class="link-img">渗透<span class="word-hidden">技术</span></span>
+							<a href="https://www.youtube.com/channel/UCIsI4Q2tuMO3VF_aRNGNN2w" title="NikkoCat-YouTube" target="_blank">
+								<span class="link-word"><img src="logo/YouTube.png" alt="pt" class="link-img"><span class="word-hidden">YouTube</span></span>
 							</a>
 						</li>
-						<li >
-							<a href="../sitemap.html" title="sitemap">
-								<span class="link-word"><img src="../logo/archives.png" alt="archives" class="link-img"><span class="word-hidden">文章</span>归档</span>
+						<li>
+							<a href="sitemap.html" title="sitemap">
+								<span class="link-word"><img src="logo/archives.png" alt="archives" class="link-img"><span class="word-hidden">所有内容</span></span>
 							</a>
 						</li>
 					</ul>
@@ -110,9 +102,9 @@
 
 				<footer class="text-footer">
 					<p>
-						*转载请注明来自:<a title="晴刃-自由、互助、分享、专注计算机技术。" href="http://x.qingsword.com" target="_blank">晴刃(X.QingSword.COM)</a>
+						*转载请注明来自:<a title="NikkoCat.COM。" href="www.nikkocat.com" target="_blank">阳光猫小黑(NikkoCat.COM)</a>
 					</p>
-					<p>*原文连接:<a title="标题" href="https://x.qingsword.com/qing/.html" target="_blank">https://x.qingsword.com/qing/.html</a></p>
+					<p>*原文连接:<a title="标题" href="www.nikkocat.com/Cat/.html" target="_blank">www.nikkocat.com/Cat/.html</a></p>
 				</footer>
 			</article>
 			<!-- /文章区 -->	
@@ -123,7 +115,7 @@
 	<!-- footer -->
 	<footer id="footer">
 		<div class="footer-container">
-			QingSword.COM &nbsp;<img src="../logo/by-nc-sa.png" alt="Creative Commons" title="Creative Commons">
+			NikkoCat.COM &nbsp;<img src="logo/copyright.png" alt="未经作者允许,禁止任何形式的复制与转载" title="未经作者允许,禁止任何形式的复制与转载">&nbsp;All Rights Reserved.
 		</div>
 	</footer>
 	<!-- /footer -->
