--- a/sitemap.html
+++ b/sitemap.html
@@ -81,22 +81,13 @@
 				<div class="pt-ul">
 					<h3 id="pt-metasploit" class="col-name clearnavfix">Metasploit</h3>
 					<ul class="col-content">
-						<li><a href="qing/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
-						<li><a href="qing/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
-						<li><a href="qing/Metasploit-3.html" title="[Metasploit]-3-利用MS08-067漏洞获取目标主机控制权"  target="_blank">[Metasploit]-3-利用MS08-067漏洞获取目标主机控制权</a></li>
-						<li><a href="qing/Metasploit-4.html" title="[Metasploit]-4-msf常用命令详解"  target="_blank">[Metasploit]-4-msf常用命令详解</a></li>
-						<li><a href="qing/Metasploit-5.html" title="[Metasploit]-5-Exploit模块"  target="_blank">[Metasploit]-5-Exploit模块</a></li>
-						<li><a href="qing/Metasploit-6.html" title="[Metasploit]-6-使用ms17-010渗透Win7与Win2008"  target="_blank">[Metasploit]-6-使用ms17-010渗透Win7与Win2008</a></li>
-						<li><a href="qing/Metasploit-7.html" title="[Metasploit]-7-如何获得Windows最高TrustedInstaller权限"  target="_blank">[Metasploit]-7-如何获得Windows最高TrustedInstaller权限</a></li>
-						<li><a href="qing/Metasploit-8.html" title="[Metasploit]-8-Payload的生成与绑定"  target="_blank">[Metasploit]-8-Payload的生成与绑定</a></li>
-						<li><a href="qing/Metasploit-9.html" title="[Metasploit]-9-利用Windows远程桌面功实现Payload后门"  target="_blank">[Metasploit]-9-利用Windows远程桌面功实现Payload后门</a></li>
-						<li><a href="qing/Metasploit-10.html" title="[Metasploit]-10-使用msfconsole代替msf控制台语句"  target="_blank">[Metasploit]-10-使用msfconsole代替msf控制台语句</a></li>
+						<li><a href="Cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
 					</ul>
 				</div>
 				<div class="pt-ul">
 					<h3 id="pt-web" class="col-name clearnavfix">Web渗透</h3>
 					<ul class="col-content">
-						<li><a href="qing/Web-1.html" title="[Web渗透]-1-上传漏洞解析" target="_blank">[Web渗透]-1-上传与文件包含漏洞解析</a></li>
+						<li><a href="Cat/Web-1.html" title="[Web渗透]-1-上传漏洞解析" target="_blank">[Web渗透]-1-上传与文件包含漏洞解析</a></li>
 				</div>
 <!-- 
 				<div class="sections-title">
