--- a/Cat/templet.html
+++ b/Cat/templet.html
@@ -9,8 +9,9 @@
 	<meta name="author" content="NikkoCat.COM">
 	<meta name="keywords" content="NikkoCat,nikkocat,阳光猫小黑,阳光猫,Windows操作技巧,Linux操作技巧,MacOS操作技巧,软件推荐,Windows软件推荐,Linux软件推荐,MacOS软件推荐,漏洞修复,工作效率提升,自动化办公,office技巧,PPT模板,python全自动办公,系统激活,Windows系统激活,新手学电脑,小白学电脑,电脑小白">
 	<title>NikkoCat - 阳光猫小黑 - WWW.NikkoCat.COM</title>
-	<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.png">
+	<link rel="shortcut icon" type="image/x-icon" href="../logo/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../css/basic.css">
+	<link rel="stylesheet" type="text/css" href="../css/home.css">
 	<link rel="stylesheet" type="text/css" href="../css/text.css">
 	<!-- 代码块高亮js -->
 	<link type="text/css" rel="stylesheet" href="../plugins/SyntaxHighlighter/styles/shCore.css"/>
@@ -38,17 +39,17 @@
 					<ul>
 						<li class="active li-hidden">
 							<a href="index.html" title="home">
-								<span class="link-word"><img src="logo/home.png" alt="home" class="link-img"><span class="word-hidden">首页</span></span>
+								<span class="link-word"><img src="../logo/home.png" alt="home" class="link-img"><span class="word-hidden">首页</span></span>
 							</a>
 						</li>
 						<li class="li-hidden">
 							<a href="https://www.youtube.com/channel/UCIsI4Q2tuMO3VF_aRNGNN2w" title="NikkoCat-YouTube" target="_blank">
-								<span class="link-word"><img src="logo/YouTube.png" alt="pt" class="link-img"><span class="word-hidden">YouTube</span></span>
+								<span class="link-word"><img src="../logo/YouTube.png" alt="pt" class="link-img"><span class="word-hidden">YouTube</span></span>
 							</a>
 						</li>
 						<li>
 							<a href="sitemap.html" title="sitemap">
-								<span class="link-word"><img src="logo/archives.png" alt="archives" class="link-img"><span class="word-hidden">所有内容</span></span>
+								<span class="link-word"><img src="../logo/archives.png" alt="archives" class="link-img"><span class="word-hidden">所有内容</span></span>
 							</a>
 						</li>
 					</ul>
