--- a/Cat/templet.html
+++ b/Cat/templet.html
@@ -111,9 +111,9 @@
 
 				<footer class="text-footer">
 					<p>
-						*转载请注明来自:<a title="NikkoCat.COM。" href="www.nikkocat.com" target="_blank">阳光猫小黑(NikkoCat.COM)</a>
+						*转载请注明来自:<a title="NikkoCat.COM" href="https://www.nikkocat.com" target="_blank">阳光猫小黑(NikkoCat.COM)</a>
 					</p>
-					<p>*原文连接:<a title="标题" href="www.nikkocat.com/Cat/.html" target="_blank">www.nikkocat.com/Cat/.html</a></p>
+					<p>*原文连接:<a title="标题" href="https://www.nikkocat.com/Cat/.html" target="_blank">https://www.nikkocat.com/Cat/.html</a></p>
 				</footer>
 			</article>
 			<!-- /文章区 -->	
