--- a/Cat/templet.html
+++ b/Cat/templet.html
@@ -124,7 +124,7 @@
 	<!-- footer -->
 	<footer id="footer">
 		<div class="footer-container">
-			NikkoCat.COM &nbsp;<img src="logo/copyright.png" alt="未经作者允许,禁止任何形式的复制与转载" title="未经作者允许,禁止任何形式的复制与转载">&nbsp;All Rights Reserved.
+			NikkoCat.COM &nbsp;<img src="../logo/copyright.png" alt="未经作者允许,禁止任何形式的复制与转载" title="未经作者允许,禁止任何形式的复制与转载">&nbsp;All Rights Reserved.
 		</div>
 	</footer>
 	<!-- /footer -->
