--- a/Cat/templet.html
+++ b/Cat/templet.html
@@ -11,7 +11,6 @@
 	<title>NikkoCat - 阳光猫小黑 - WWW.NikkoCat.COM</title>
 	<link rel="shortcut icon" type="image/x-icon" href="../logo/favicon.png">
 	<link rel="stylesheet" type="text/css" href="../css/basic.css">
-	<link rel="stylesheet" type="text/css" href="../css/home.css">
 	<link rel="stylesheet" type="text/css" href="../css/text.css">
 	<!-- 代码块高亮js -->
 	<link type="text/css" rel="stylesheet" href="../plugins/SyntaxHighlighter/styles/shCore.css"/>
@@ -38,7 +37,7 @@
 					<h1 style="display:none;">网站导航</h1> 
 					<ul>
 						<li class="active li-hidden">
-							<a href="index.html" title="home">
+							<a href="../index.html" title="home">
 								<span class="link-word"><img src="../logo/home.png" alt="home" class="link-img"><span class="word-hidden">首页</span></span>
 							</a>
 						</li>
@@ -48,7 +47,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="sitemap.html" title="sitemap">
+							<a href="../sitemap.html" title="sitemap">
 								<span class="link-word"><img src="../logo/archives.png" alt="archives" class="link-img"><span class="word-hidden">所有内容</span></span>
 							</a>
 						</li>
