--- a/sitemap.html
+++ b/sitemap.html
@@ -81,13 +81,13 @@
 				<div class="pt-ul">
 					<h3 id="pt-metasploit" class="col-name clearnavfix">Metasploit</h3>
 					<ul class="col-content">
-						<li><a href="Cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
+						<li><a href="cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
 					</ul>
 				</div>
 				<div class="pt-ul">
 					<h3 id="pt-web" class="col-name clearnavfix">Web渗透</h3>
 					<ul class="col-content">
-						<li><a href="Cat/Web-1.html" title="[Web渗透]-1-上传漏洞解析" target="_blank">[Web渗透]-1-上传与文件包含漏洞解析</a></li>
+						<li><a href="cat/Web-1.html" title="[Web渗透]-1-上传漏洞解析" target="_blank">[Web渗透]-1-上传与文件包含漏洞解析</a></li>
 				</div>
 <!-- 
 				<div class="sections-title">
@@ -132,8 +132,8 @@
 				<div class="recommend">
 					<h2>推荐 <span class="eng-h">/Recom</span></h2>
 					<ul>
-						<li><a href="qing/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建"  target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
-						<li><a href="qing/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
+						<li><a href="cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建"  target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
+						<li><a href="cat/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
