--- a/sitemap.html
+++ b/sitemap.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
 	<meta name="description" content="NikkoCat,阳光猫小黑,会定期分享好玩的Windows|Linux|MacOS系统操作技巧,实用的软件推荐,系统漏洞防御方法,办公自动化,能够提高日常工作效率的小技巧,通过网络赚钱的思路等...">
 	<meta name="author" content="NikkoCat.COM">
-	<meta name="keywords" content="NikkoCat,nikkocat,阳光猫小黑,阳光猫,Windows操作技巧,Linux操作技巧,MacOS操作技巧,软件推荐,Windows软件推荐,Linux软件推荐,MacOS软件推荐,漏洞修复,工作效率提升,自动化办公,office技巧,PPT模板,python全自动办公,系统激活,Windows系统激活,新手学电脑,小白学电脑,电脑小白">
+	<meta name="keywords" content="NikkoCat,nikkocat,阳光猫小黑,阳光猫,Windows操作技巧,Linux操作技巧,MacOS操作技巧,软件推荐,Windows软件推荐,Linux软件推荐,MacOS软件推荐,漏洞修复,工作效率提升,自动化办公,office技巧,PPT模板,python全自动办公,系统激活,Windows系统激活,新手学电脑,小白学电脑,电脑小白,Rust,Rust编程,黑客技术,黑客,红客,hack,hacker">
 	<title>NikkoCat - 阳光猫小黑 - WWW.NikkoCat.COM</title>
 	<link rel="shortcut icon" type="image/x-icon" href="logo/favicon.png">
 	<link rel="stylesheet" type="text/css" href="css/basic.css">
@@ -60,13 +60,20 @@
 				<div class="sitemap">
 					<ul class="sitemap-ul">
 						<li>
-							<a href="#pt" title="渗透测试">渗透测试</a>
+							<a href="#Pro-Lang" title="编程语言">编程语言</a>
 							<ul class="sitemap-sub-ul">
-								<li><a href="#pt-metasploit" title="Metasploit">Metasploit</a></li>
+								<li><a href="#Rust" title="Rust">Rust</a></li>
+							</ul>
+						</li>
+						<!--  网站地图标题下方，可扩展的分类
+						<li>
+							<a href="#Pro-Lang" title="编程语言">编程语言</a>
+							<ul class="sitemap-sub-ul">
+								<li><a href="#Rust" title="Rust">Rust</a></li>
 								<li><a href="#pt-web" title="Web渗透">Web渗透</a></li>
 							</ul>
 						</li>
-
+						-->
 					</ul>
 				</div>
 				<!-- /sitemap头部 -->
@@ -76,24 +83,27 @@
 				<!-- sitemap列表区 -->
 				
 				<div class="sections-title">
-					<h2 id="pt" class="clearnavfix">渗透测试</h2>
+					<h2 id="Pro-Lang" class="clearnavfix">编程语言</h2>
 				</div>
-				<div class="pt-ul">
-					<h3 id="pt-metasploit" class="col-name clearnavfix">Metasploit</h3>
+				<div class="Pro-Lang-ul">
+					<h3 id="Rust" class="col-name clearnavfix">Rust</h3>
 					<ul class="col-content">
 						<li><a href="cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
 					</ul>
 				</div>
-				<div class="pt-ul">
+				<!-- 分类文章列表 扩展模块
+				<div class="Pro-Lang-ul">
 					<h3 id="pt-web" class="col-name clearnavfix">Web渗透</h3>
 					<ul class="col-content">
 						<li><a href="cat/Web-1.html" title="[Web渗透]-1-上传漏洞解析" target="_blank">[Web渗透]-1-上传与文件包含漏洞解析</a></li>
 				</div>
-<!-- 
+				-->
+
+				<!-- 归档页面 分类h2标题
 				<div class="sections-title">
 					<h2 id="net" class="clearnavfix">网络技术</h2>
 				</div>
--->
+				-->
 
 			</div>	
 			<!-- /sitemap列表区 -->
