--- a/sitemap.html
+++ b/sitemap.html
@@ -88,7 +88,7 @@
 				<div class="Pro-Lang-ul">
 					<h3 id="Rust" class="col-name clearnavfix">Rust</h3>
 					<ul class="col-content">
-						<li><a href="cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建" target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
+						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础" target="_blank">Rust-1-编译基础</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -142,7 +142,7 @@
 				<div class="recommend">
 					<h2>推荐 <span class="eng-h">/Recom</span></h2>
 					<ul>
-						<li><a href="cat/Metasploit-1.html" title="[Metasploit]-1-渗透测试环境搭建"  target="_blank">[Metasploit]-1-渗透测试环境搭建</a></li>
+						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础" target="_blank">Rust-1-编译基础</a></li>
 						<li><a href="cat/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
 					</ul>
 					<div class="clearfix"></div>
