--- a/cat/Rust-1.html
+++ b/cat/Rust-1.html
@@ -230,7 +230,7 @@
 					<p>
 						*转载请注明来自:<a title="NikkoCat.COM" href="https://www.nikkocat.com" target="_blank">阳光猫小黑(NikkoCat.COM)</a>
 					</p>
-					<p>*原文连接:<a title="标题" href="https://www.nikkocat.com/cat/.html" target="_blank">https://www.nikkocat.com/cat/.html</a></p>
+					<p>*原文连接:<a title="Rust-1-编译基础" href="https://www.nikkocat.com/cat/Rust-1.html" target="_blank">https://www.nikkocat.com/cat/Rust-1.html</a></p>
 				</footer>
 			</article>
 			<!-- /文章区 -->	
