--- a/sitemap.html
+++ b/sitemap.html
@@ -137,13 +137,17 @@
 						<img src="logo/windows.png" alt="Windows操作技巧" class="qingbarin">
 						<span class="about-span">Windows操作技巧</span>
 					</a>	
+					<a href="sitemap.html#Rust" title="Rust程序设计" class="about-link"  target="_blank">
+						<img src="logo/rust.png" alt="Rust程序设计" class="qingbarin">
+						<span class="about-span">Rust程序设计</span>
+					</a>
 				</div>
 
 				<div class="recommend">
 					<h2>推荐 <span class="eng-h">/Recom</span></h2>
 					<ul>
 						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础" target="_blank">Rust-1-编译基础</a></li>
-						<li><a href="cat/Metasploit-2.html" title="[Metasploit]-2-Metasploit简介"  target="_blank">[Metasploit]-2-Metasploit简介</a></li>
+						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础"  target="_blank">Rust-1-编译基础</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
