--- a/cat/Rust-2.html
+++ b/cat/Rust-2.html
@@ -67,170 +67,206 @@
 				</header><!-- /header -->
 				<section class="text-body">
 					<h2>引言</h2>
-					<p>这篇文章介绍Rust数据类型，包括通过rustc直接编译，通过cargo规范编译，基本的输入输出语法，随机选择器的使用，match比较语法的使用。</p>
+					<p>这篇文章介绍Rust数据类型，包含Rust中大部分常用数据类型：整形，浮点型，布尔型，字符型（Rust中String与&ampstr两种字符串类型的区别），复合数据类型（元组，数组）的声明与使用方法介绍。</p>
 					<!-- 目录 -->
 					<h2>文章目录</h2>
 					<ul class="contents">	
-						 <li><a href="#Rust-base-1">0×1.通过rustc直接编译程序</a></li>
-						 <li><a href="#Rust-base-2">0×2.通过cargo规范编译程序</a></li>
-						 <li><a href="#Rust-base-3">0×3.一个猜数小程序</a></li>
+						 <li><a href="#Rust-type-of-data-1">0×1.整形</a></li>
+						 <li><a href="#Rust-type-of-data-2">0×2.浮点型</a></li>
+						 <li><a href="#Rust-type-of-data-3">0×3.布尔型</a></li>
+						 <li><a href="#Rust-type-of-data-4">0×4.字符/字符串类型</a></li>
+						 <li><a href="#Rust-type-of-data-5">0×5.元组</a></li>
+						 <li><a href="#Rust-type-of-data-6">0×6.数组</a></li>
 					 </ul>
 					<!-- /目录 -->
 
 					<!-- 正文 -->
-					<h2 id="Rust-base-1">0×1.通过rustc直接编译程序</h2>
+					<h2 id="Rust-type-of-data-1">0×1.整形</h2>
 
-					<p>如果只是写一些小应用，并不需要使用cargo规范，可以直接使用rustc进行编译，如下：</p>
-					<p>*注：Rust系列所有程序都在linux系统中测试执行，如果您是Windows系统，生成的文件后缀是.exe，执行方法会有所不同。</p>
+					<p>在Rust中，常用的整形如下表所示：</p>
+					<img src="images/Rust-type-of-data.png" alt="images/Rust-type-of-data.png">
+
+					<p>整形分为有符号与无符号两种，在Rust中，用“i前缀+数字”表示有符号，用“u前缀+数字”表示无符号，请看下面的声明实例：</p>
 					<pre class="brush: c;">
-					//用记事本写一个小程序，保存为.rs结尾的文件,本例保存为"nikkocat.rs"
 					fn main() {
-					    println!("Hello NikkoCat.com");
+					    let num_1:u32=100; //声明一个长度为32bit的无符号不可变整形
+					    let mut num_2:i16=500; //声明一个长度为16bit的有符号可变整形
+					    println!("{},{}",num_1,num_2);
+					    num_2*=2;
+					    println!("{},{}",num_1,num_2);
+					    let mut num_3:isize=10000; //声明一个arch有符号整数类型，长度取决于机器架构
+    					println!("{}",num_3);
 					}
 
-					//在命令行中执行 "rustc 文件名"
-					rustc nikkocat.rs
-
-					//执行结果，会在命令行所在文件夹中生成nikkocat可执行程序，直接执行这个程序
-					 ./nikkocat
-					Hello NikkoCat.com
+					程序输出：
+					100,500
+					100,1000
+					10000
 					</pre>
+					<p>整形长度可以是8、16、32、64、128以及arch，其中，arch长度依赖于运行程序的计算机架构：64位架构上为64-bit，32位架构上为32-bit。</p>
 
-					<h2 id="Rust-base-2">0×2.通过cargo规范编译程序</h2>
-					<p>
-					复杂项目构建，使用cargo规范：
-					</p>
-					<p class="indent-p">    
-						使用 cargo new [文件夹名称]，来构建项目文件夹；<br>
-						使用 cargo build 编译项目，会在nikkocat/target/debug中生成与项目文件夹同名的可执行文件;<br>
-					    使用 cargo run 一步构建并执行;<br>
-					    使用 cargo check 在不生成二进制文件的情况下构建项目来检查错误;<br>
-					    有别于将构建结果放在与源码相同的目录，Cargo 会将其放到 target/debug 目录;<br>
-					    当项目最终准备好发布时，可以使用 cargo build --release 来优化编译项目;<br>
-					    这会在 target/release 而不是 target/debug 下生成可执行文件;<br>
-					</p>
+					<h2 id="Rust-type-of-data-2">0×2.浮点型</h2>
 
-					<h2 id="Rust-base-3">0×3.一个猜数小程序</h2>
-
+					<p>Rust 的浮点数类型是f32和f64，分别占32位和64位，默认类型是 f64。</p>
 					<pre class="brush: c;">
-					//使用cargo规范创建一个猜数小程序，在终端中执行下面的命令
-					cargo new guess_game 
-
-					//进入项目文件夹，编辑Cargo.toml文件
-					cd guess_game 
-					vim Cargo.toml   
-
-					//在文件中添加下面这一行代码到 [dependencies] 片段标题之下
-					//这里需要这样手动定义一下rand类的版本，否则程序无法编译
-					rand = "0.8.3"
-
-					//进入src文件夹，编辑main.rs文件，输入下面这段完整代码
-
-					use std::io;
-					use std::cmp::Ordering;
-					use rand::Rng;
-
 					fn main() {
-					    println!("Guess the number!");
+					    let mut f1:f32=2.3333;  //声明f1、f2、f3都是可变f32类型
+					    let mut f2:f32=2.33;
+					    let mut f3:f32=f2+f1;
+					    println!("{}+{}={}",f1,f2,f3);
 
-					    let secret_number = rand::thread_rng().gen_range(1..101);
+					    let f4=3.33; //默认没有声明，f4、f5、f6都是f64类型
+					    let f5=4.44;
+					    let f6=f4+f5;
+					    println!("{}+{}={}",f4,f5,f6);
 
-					    loop {
-					        println!("Please input your guess.");
-
-					        let mut guess = String::new();
-
-					        io::stdin()
-					        .read_line(&mut guess)
-					        .expect("Failed to read line");
-
-					        let guess: u32 = match guess.trim().parse() {
-					            Ok(num) => num,
-					            Err(_) => continue,
-					        };
-
-					        println!("You guessed: {}", guess);
-
-					        match guess.cmp(&secret_number) {
-					            Ordering::Less => println!("Too small!"),
-					            Ordering::Greater => println!("Too big!"),
-					            Ordering::Equal => {
-					                println!("You win!");
-					                break;
-					            }
-					        }
-					    }
+					    //不同的数据类型，例如整形与浮点数要进行计算，必须将整形先转化成浮点型
+					    //通过as运算符，显示的将i7转换成f64类型，f32与f64之间进行运算时同理，也需要先进行转换
+					    let i7=12;   
+						let f8:f64=i7 as f64+f6;
+						println!("{}",f8);
 					}
+
+					程序输出：
+					2.3333+2.33=4.6633
+					3.33+4.44=7.77
+					19.77
 					</pre>
-					<p>我们来拆解一下这段代码，首先头文件：</p>
+					<p>注：使用as运算符将浮点型转换成整型时，会直接砍去小数部分，取整数部分。</p>
+
+
+					<h2 id="Rust-type-of-data-3">0×3.布尔型</h2>
+
+					<p>Rust中的布尔类型比较简单，请看下面的实例：</p>
 					<pre class="brush: c;">
-					//使用use关键词，作用是引用一些现成的Rust模块或类
-					use std::io;  //标准输入输出模块，包含println函数
-					use std::cmp::Ordering; //包含数学运算转换和比较的模块
-					use rand::Rng;  //包含随机数生成器的模块
+					fn main() {
+					    let z=true;  //隐式声明
+					    let j:bool=false;  //显示声明
+					    println!("{} or {}",z,j);
+					}
+
+					程序输出：
+					true or false
 					</pre>
 
-					<p>再来看函数主体：</p>
+					<h2 id="Rust-type-of-data-4">0×4.字符/字符串类型</h2>
+
+					<p>在Rust中，我们用单引号声明 char 类型，而与之相反的是，使用双引号声明字符串类型。</p>
+					<p>字符类型的声明与使用：</p>
+ 					<pre class="brush: c;">
+ 					fn main() {
+					    let s1='a';   //隐式声明char变量
+					    let s2:char='b'; //显示声明
+					    println!("{}|{}",s1,s2);
+					}
+
+					程序输出：
+					a|b
+					</pre>
+
+					<p>String类型的声明与使用：</p>
 					<pre class="brush: c;">
-					fn main() {   //main函数，程序的入口点，系统执行程序时，从这里开始运行
-					    println!("Guess the number!"); //println!函数，打印一行文字在屏幕上显示
+					//三种创建字符串变量的方法
+ 					fn main() {
+					    let str1="NikkoCat.com".to_string();
+					    let str2=String::from("NikkoCat.com");
+					    let str3:String="NikkoCat.com".into();
+					    println!("{}\n{}\n{}",str1,str2,str3);
+					}
 
-					    let secret_number = rand::thread_rng().gen_range(1..101);
-					    //let关键词，用来定义变量，secret_number就是我们自定义的变量名
-					    //rand::thread_rng().gen_range(1..101); 这是一个随机数生成器
-					    //意思就是从rand类里面调用thread_rng()函数的gen_range()函数
-					    //1..101是传递给gen_range()函数的参数
-					    //为什么语法结构是这个样子？设计者这么定义的
-					    //只需要知道，这一句的功能就是从1-100里面随机选择一个数字
-					    //这个数字取出来后存放到secret_number变量里
-					    //唯一要注意的是，随机选择的范围(1..101)包含1，但是不包含101
+					程序输出：
+					NikkoCat.com
+					NikkoCat.com
+					NikkoCat.com
 					</pre>
 
+					<p>String类型的数据是可以追加内容的，请看下面的实例：</p>
 					<pre class="brush: c;">
-					//loop循环，进程执行程序遇到loop后，如果loop内部没有break跳出，将反复执行loop中的内容，直到被系统终止
-					loop {
-					        println!("Please input your guess.");
+					fn main() {
+					    let mut str1="NikkoCat.com".to_string();
+					    let mut str2=String::from("NikkoCat.com");
+					    let mut str3:String="NikkoCat.com".into();
 
-					        //创建变量guess，mut关键词声明guess是一个“可变变量”，类型为String（字符串类型）
-					        let mut guess = String::new(); 
+					    str1.push('.');  //使用push函数，追加单个字符（char）
+					    str2.push_str(".bk"); //使用push_str函数，追加字符串
+					    str3.push_str(".tar.gz");
+					    println!("{}\n{}\n{}",str1,str2,str3);
+					}
 
-					        //使用标准输入输io类的stdin方法中的read_line方法，读取一行用户的输入储存到guess变量中
-					        //对可变变量的存储，需要加上&ampmut这个关键词
-					        //如果读取报错，会执行expect函数的部分，输出"Failed to read line"到屏幕上
-					        //这三行可以写在一行上，如下所示，只是为了美观，分成三行来写
-					        //io::stdin().read_line(&mut guess).expect("Failed to read line");
-					        io::stdin()
-					        .read_line(&mut guess)
-					        .expect("Failed to read line");
-
-					        //使用match运算语法，将guess的值通过trim()方法去掉前后空格，再通过parse()方法转化成整数
-					        //将这个转化后的整数，存储成u32类型
-					        let guess: u32 = match guess.trim().parse() {
-					            Ok(num) => num,  //如果转化成功，返回用户输入的整数值
-					            Err(_) => continue, //如果没有转化成功，则跳转到loop起始位置，继续循环
-					        }; //Err(_) 中的下划线_是一个通配符，代表接收任何报错
-
-					        //输出用户猜测的数字
-					        println!("You guessed: {}", guess);
-
-					        //再次使用match语法，将guess变量与secret_number变量进行比较
-					        match guess.cmp(&secret_number) {
-					            Ordering::Less => println!("Too small!"), //guess比secret_number小
-					            Ordering::Greater => println!("Too big!"), //guess比secret_number大
-					            Ordering::Equal => {  //如果比较结果一样大
-					                println!("You win!"); 
-					                break;  //跳出循环
-					            }
-					        }
-					    }
+					程序输出：
+					NikkoCat.com.
+					NikkoCat.com.bk
+					NikkoCat.com.tar.gz
 					</pre>
+
+					<p>除了String类型之外，Rust中还有一个&ampstr类型，也是用来存储字符串的，与String不同，在Rust的语言的设计中，&ampstr被设计成内存地址与长度都是固定的类型，而String被设计成包含了数据指针、数组容量、数据长度等三个主要字段，如果新追加的字符串数据长度在初始申请的内存容量范围内，数据会直接在原有的内存范围内修改，但如果新追加的数据长度超出初始申请的内存容量范围，它可以重新申请更大的内存来存放这些数据，我们可以简单的理解成，String类型用来存储可变长度的字符串，而&ampstr类型可以用来存储只读（不可变长度）的字符串，请看下面关于&ampstr类型的实例：</p>
+					<pre class="brush: c;">
+					fn main() {
+					    let s0="NikkoCat.com";  //隐式声明&str类型
+					    let s1:&str="www.NikkoCat.com"; //显示声明
+					    println!("{}\n{}",s0,s1);
+					}
+
+					程序输出：
+					NikkoCat.com
+					www.NikkoCat.com
+					</pre>
+					<p>可能有人会想，为什么需要两个不同的字符串类型String与&ampstr，设计者给出的回答是，为了效率，在不需要改变字符串长度的情况下，使用&ampstr来储存字符串，能够提升程序的效率。</p>
+
+					<p>String与&ampstr类型之间的转换：</p>
+					<pre class="brush: c;">
+					fn main() {
+					    let s0="NikkoCat.com";
+					    let s1:String=s0.to_string();  //可以通过to_string()函数将&str类型转化成String
+					    let s2:&str=&s1; //而String类型转化成&str类型，只需要使用&String即可
+
+					    println!("{}\n{}\n{}",s0,s1,s2);
+					}
+
+					程序输出：
+					NikkoCat.com
+					NikkoCat.com
+					NikkoCat.com
+					</pre>
+
+					<h2 id="Rust-type-of-data-5">0×5.元组</h2>
+
+					<p>在Rust中元组使用()来声明，并且元组的长度是不可变的，与数组不同，一个元组中可以存储不同类型的数据，请看下面的实例：</p>
+					<pre class="brush: c;">
+					fn main() {
+						//创建元组的两种方式，隐式和显示声明元组中每个元素的类型
+					    let tup1=('a',12,2.33,"NikkoCat.com");
+					    let tup2:(f64,u32,&str)=(2.33,11,"NikkoCat.com");
+
+					    //读取元组中值的两种方式
+					    //第一种方式，元组中有多少元素，就需要多少变量来接收
+					    //使用x、y、z三个变量来读取tup2元组中三个元素
+					    let (x,y,z)=tup2;
+
+					    //第二种方式，使用“元组名称.index”的方式，分别读取tup1中索引值为0，1，2，3的元素
+					    println!("{}|{}|{}|{}",tup1.0,tup1.1,tup1.2,tup1.3);
+					    println!("{}|{}|{}",x,y,z);
+					}
+
+					程序输出：
+					a|12|2.33|NikkoCat.com
+					2.33|11|NikkoCat.com
+					</pre>
+
+					<h2 id="Rust-type-of-data-6">0×6.数组</h2>
+
+					<p>不同于元组，Rust中同一个数组中包含的元素类型必须相同，使用[]来声明一个数组，请看下面的实例：</p>
+					<pre class="brush: c;">
+					
+					</pre>
+
 					<!-- /正文 -->
 
 				<footer class="text-footer">
 					<p>
 						*转载请注明来自:<a title="NikkoCat.COM" href="https://www.nikkocat.com" target="_blank">阳光猫小黑(NikkoCat.COM)</a>
 					</p>
-					<p>*原文连接:<a title="Rust-1-编译基础" href="https://www.nikkocat.com/cat/Rust-1.html" target="_blank">https://www.nikkocat.com/cat/Rust-1.html</a></p>
+					<p>*原文连接:<a title="Rust-2-数据类型" href="https://www.nikkocat.com/cat/Rust-2.html" target="_blank">https://www.nikkocat.com/cat/Rust-2.html</a></p>
 				</footer>
 			</article>
 			<!-- /文章区 -->	
