--- a/cat/Rust-2.html
+++ b/cat/Rust-2.html
@@ -199,7 +199,7 @@
 					NikkoCat.com.tar.gz
 					</pre>
 
-					<p>除了String类型之外，Rust中还有一个&ampstr类型，也是用来存储字符串的，与String不同，在Rust的语言的设计中，&ampstr被设计成内存地址与长度都是固定的类型，而String被设计成包含了数据指针、数组容量、数据长度等三个主要字段，如果新追加的字符串数据长度在初始申请的内存容量范围内，数据会直接在原有的内存范围内修改，但如果新追加的数据长度超出初始申请的内存容量范围，它可以重新申请更大的内存来存放这些数据，我们可以简单的理解成，String类型用来存储可变长度的字符串，而&ampstr类型可以用来存储只读（不可变长度）的字符串，请看下面关于&ampstr类型的实例：</p>
+					<p>除了String类型之外，Rust中还有一个&amp;str类型，也是用来存储字符串的，与String不同，在Rust的语言的设计中，&amp;str被设计成内存地址与长度都是固定的类型，而String被设计成包含了数据指针、数组容量、数据长度等三个主要字段，如果新追加的字符串数据长度在初始申请的内存容量范围内，数据会直接在原有的内存范围内修改，但如果新追加的数据长度超出初始申请的内存容量范围，它可以重新申请更大的内存来存放这些数据，我们可以简单的理解成，String类型用来存储可变长度的字符串，而&amp;str类型可以用来存储只读（不可变长度）的字符串，请看下面关于&amp;str类型的实例：</p>
 					<pre class="brush: c;">
 					fn main() {
 					    let s0="NikkoCat.com";  //隐式声明&str类型
@@ -211,14 +211,14 @@
 					NikkoCat.com
 					www.NikkoCat.com
 					</pre>
-					<p>可能有人会想，为什么需要两个不同的字符串类型String与&ampstr，设计者给出的回答是，为了效率，在不需要改变字符串长度的情况下，使用&ampstr来储存字符串，能够提升程序的效率。</p>
+					<p>可能有人会想，为什么需要两个不同的字符串类型String与&amp;str，设计者给出的回答是，为了效率，在不需要改变字符串长度的情况下，使用&amp;str来储存字符串，能够提升程序的效率。</p>
 
-					<p>String与&ampstr类型之间的转换：</p>
+					<p>String与&amp;str类型之间的转换：</p>
 					<pre class="brush: c;">
 					fn main() {
 					    let s0="NikkoCat.com";
 					    let s1:String=s0.to_string();  //可以通过to_string()函数将&str类型转化成String
-					    let s2:&str=&s1; //而String类型转化成&str类型，只需要使用&String即可
+					    let s2:&str=&amp;s1; //而String类型转化成&str类型，只需要使用&String即可
 
 					    println!("{}\n{}\n{}",s0,s1,s2);
 					}
@@ -256,9 +256,63 @@
 					<h2 id="Rust-type-of-data-6">0×6.数组</h2>
 
 					<p>不同于元组，Rust中同一个数组中包含的元素类型必须相同，使用[]来声明一个数组，请看下面的实例：</p>
+					<p>不可变长度数组：</p>
 					<pre class="brush: c;">
-					
+					fn main() {
+						//三种方式声明数组
+						//第一种：没有长度限制，程序自动识别数组类型为&str
+					    let a=["a", "b", "c", "d", "e"];
+					    //第二种：定义数组类型为u32，并且数组长度为3（包含三个元素）
+					    let b:[u32;3]=[1,2,3];
+					    let c=[3;4];
+
+					    let x:&str=a[2];
+					    let y:u32=b[0];
+					    let z=c[1];
+
+					    println!("{}\n{}\n{}",x,y,z)
+					}
+
+					程序输出：
+					c
+					1
+					3
 					</pre>
+					<p>可变长度数组：</p>
+					<pre class="brush: c;">
+					fn main() {
+						//第一种方式，创建一个u32数据类型的可变长度空数组
+					    let mut a:Vec&lt;u32&gt;=Vec::new();
+					    //第二种方式，使用vec!宏直接创建可变长度数组
+					    let mut b=vec!["a", "b", "c", "d", "e", "f"];
+
+					    //在数组a的末尾添加数据
+					    a.push(1);
+					    a.push(2);
+
+					    //在数组b的末尾添加数据
+					    b.push("gg");
+					    println!("{:?}", b); //打印数组b
+
+					    //移除b数组中index为0的元素
+					    b.remove(0);
+
+					    b.pop(); //移除b数组中最后一个元素
+
+					    //也可以用这种方式，移除b中最后一个元素，b.len()返回数组长度，长度减1，就得到了最后一个元素的索引
+					    b.remove(b.len()-1);
+
+					    println!("{:?}", a);
+					    println!("{:?}", b);
+					}
+
+					程序输出：
+					["a", "b", "c", "d", "e", "f", "gg"]
+					[1, 2]
+					["b", "c", "d", "e"]
+					</pre>
+
+					<p>注：在println中{:?}与{:#?}都能打印出对应变量的数据结构，后者更加的直观。</p>
 
 					<!-- /正文 -->
 
