--- a/sitemap.html
+++ b/sitemap.html
@@ -89,7 +89,8 @@
 					<h3 id="Rust" class="col-name clearnavfix">Rust</h3>
 					<ul class="col-content">
 						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础" target="_blank">Rust-1-编译基础</a></li>
-						<li><a href="cat/Rust-1.html" title="Rust-2-编译基础"  target="_blank">Rust-2-数据类型</a></li>
+						<li><a href="cat/Rust-2.html" title="Rust-2-数据类型"  target="_blank">Rust-2-数据类型</a></li>
+						<li><a href="cat/Rust-3.html" title="Rust-3-函数"  target="_blank">Rust-3-函数</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -148,7 +149,8 @@
 					<h2>推荐 <span class="eng-h">/Recom</span></h2>
 					<ul>
 						<li><a href="cat/Rust-1.html" title="Rust-1-编译基础" target="_blank">Rust-1-编译基础</a></li>
-						<li><a href="cat/Rust-1.html" title="Rust-2-编译基础"  target="_blank">Rust-2-数据类型</a></li>
+						<li><a href="cat/Rust-2.html" title="Rust-2-数据类型"  target="_blank">Rust-2-数据类型</a></li>
+						<li><a href="cat/Rust-3.html" title="Rust-3-函数"  target="_blank">Rust-3-函数</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
