--- a/sitemap.html
+++ b/sitemap.html
@@ -92,6 +92,7 @@
 						<li><a href="cat/Rust-2.html" title="Rust-2-数据类型"  target="_blank">Rust-2-数据类型</a></li>
 						<li><a href="cat/Rust-3.html" title="Rust-3-函数"  target="_blank">Rust-3-函数</a></li>
 						<li><a href="cat/Rust-4.html" title="Rust-4-流控制"  target="_blank">Rust-4-流控制</a></li>
+						<li><a href="cat/Rust-5.html" title="Rust-5-变量数据的移动拷贝与克隆"  target="_blank">Rust-5-变量数据的移动拷贝与克隆</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -153,6 +154,7 @@
 						<li><a href="cat/Rust-2.html" title="Rust-2-数据类型"  target="_blank">Rust-2-数据类型</a></li>
 						<li><a href="cat/Rust-3.html" title="Rust-3-函数"  target="_blank">Rust-3-函数</a></li>
 						<li><a href="cat/Rust-4.html" title="Rust-4-流控制"  target="_blank">Rust-4-流控制</a></li>
+						<li><a href="cat/Rust-5.html" title="Rust-5-变量数据的移动拷贝与克隆"  target="_blank">Rust-5-变量数据的移动拷贝与克隆</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
