--- a/cat/Rust-3.html
+++ b/cat/Rust-3.html
@@ -176,6 +176,8 @@
 					}
 					</pre>
 
+					<p>对上文中*i这种表达式不太了解的，请参考:[<a title="Rust-6-所有权与变量引用" href="https://www.nikkocat.com/cat/Rust-6.html#Rust-Ownership-quotation-borrowing-3" target="_blank">Rust-6-所有权与变量引用#引用与解引用</a>]</p>
+
 					<!-- /正文 -->
 
 				<footer class="text-footer">
