--- a/cat/Rust-6.html
+++ b/cat/Rust-6.html
@@ -73,7 +73,7 @@
 					<ul class="contents">	
 						 <li><a href="#Rust-Ownership-quotation-borrowing-1">0×1.Rust所有权的概念</a></li>
 						 <li><a href="#Rust-Ownership-quotation-borrowing-2">0×2.变量的引用</a></li>
-						 
+						 <li><a href="#Rust-Ownership-quotation-borrowing-3">0×3.引用与解引用</a></li>
 					 </ul>
 					<!-- /目录 -->
 
@@ -319,6 +319,35 @@
 					• 在任意给定时间，要么只能有一个可变引用，要么只能有多个不可变引用；<br>
     				• 引用必须总是有效的；
 					</p>
+
+					<h2 id="Rust-Ownership-quotation-borrowing-3">0×3.引用与解引用</h2>
+
+					<p>对于部分类型，都需要先“解引用”，既在变量前添加"星号"，请看下面的实例：</p>
+					<pre class="brush: c;">
+					fn main() {
+					    let mut s1:String="nikkocat.com".to_string();
+					    let s2=add_string(&mut s1);
+					    println!("{}",s2);
+
+					    let mut i1:u32=23;
+					    let i2:u32=add_int(&mut i1);
+					    println!("{}",i2);
+					}
+
+					//字符串已经自动实现了解引用，能够直接通过引用变量来访问堆上的值
+					fn add_string(s:&mut String) -> String {
+					    s.push_str(".bk");
+					    s.to_string()
+					}
+
+					//对于整形，布尔型等
+					//引用后的变量，如果需要访问被引用变量的值，需要在引用变量前加上*
+					//如下所示
+					fn add_int(i:&mut u32) -> u32 {
+					    *i+1
+					}
+					</pre>
+					<p>至于哪些类型需要在引用后解引用，会在本系列后面的文章中详细介绍。</p>
 					
 					<!-- /正文 -->
 
