--- a/about.html
+++ b/about.html
@@ -96,7 +96,11 @@
 						<figcaption>支付宝打赏：</figcaption>
 						<img  class="alipay" src="logo/alipay.jpg" alt="wechatpay" title="支付宝打赏">
 					</figure>
+
 -->
+					<h2>一缕残念</h2>
+					<p>天地之间，顺应其心而活，便是最好。夏荷映日，枯荷听雨，万物生发，自有因缘。执念若生而不灭，勉强放下只是更易入了心魔。</p>
+
 					<div class="clearfix"></div>
 					<h2>联系方式</h2>
 					
