--- a/cat/templet.html
+++ b/cat/templet.html
@@ -84,7 +84,7 @@
 					<pre class="brush: bash;">
 					
 					</pre>
-					<img src="images/.jpg" alt="images/">
+					<img src="images/Rust-type-of-data.png" alt="images/Rust-type-of-data.png">
 					<p class="indent-p"></p>
 
 					<h2 id="pt-2">0×2.</h2>
