--- a/sitemap.html
+++ b/sitemap.html
@@ -94,7 +94,8 @@
 						<li><a href="cat/Rust-4.html" title="Rust-4-流控制"  target="_blank">Rust-4-流控制</a></li>
 						<li><a href="cat/Rust-5.html" title="Rust-5-变量数据的移动拷贝与克隆"  target="_blank">Rust-5-变量数据的移动拷贝与克隆</a></li>
 						<li><a href="cat/Rust-6.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-6-所有权与变量引用</a></li>
-						<li><a href="cat/Rust-7.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-7-字符串slice</a></li>
+						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
+						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -158,7 +159,8 @@
 						<li><a href="cat/Rust-4.html" title="Rust-4-流控制"  target="_blank">Rust-4-流控制</a></li>
 						<li><a href="cat/Rust-5.html" title="Rust-5-变量数据的移动拷贝与克隆"  target="_blank">Rust-5-变量数据的移动拷贝与克隆</a></li>
 						<li><a href="cat/Rust-6.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-6-所有权与变量引用</a></li>
-						<li><a href="cat/Rust-7.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-7-字符串slice</a></li>
+						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
+						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
