--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<article class="article">
 					<header>
-						<h1><a href="cat/Rust-7.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-7-字符串slice</a></h1>
+						<h1><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></h1>
 					</header>
 					<section>
 						<p>这篇文章介绍Rust中字符串切片功能slice。</p>
