--- a/sitemap.html
+++ b/sitemap.html
@@ -96,6 +96,7 @@
 						<li><a href="cat/Rust-6.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-6-所有权与变量引用</a></li>
 						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
 						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
+						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -161,6 +162,7 @@
 						<li><a href="cat/Rust-6.html" title="Rust-6-所有权与变量引用"  target="_blank">Rust-6-所有权与变量引用</a></li>
 						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
 						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
+						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
