--- a/sitemap.html
+++ b/sitemap.html
@@ -97,6 +97,7 @@
 						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
 						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
 						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
+						<li><a href="cat/Rust-10.html" title="Rust-10-Packages、Crates、Modules、Path"  target="_blank">Rust-10-Packages、Crates、Modules、Path</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -163,6 +164,7 @@
 						<li><a href="cat/Rust-7.html" title="Rust-7-字符串slice"  target="_blank">Rust-7-字符串slice</a></li>
 						<li><a href="cat/Rust-8.html" title="Rust-8-结构"  target="_blank">Rust-8-结构</a></li>
 						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
+						<li><a href="cat/Rust-10.html" title="Rust-10-Packages、Crates、Modules、Path"  target="_blank">Rust-10-Packages、Crates、Modules、Path</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
