--- a/sitemap.html
+++ b/sitemap.html
@@ -99,6 +99,7 @@
 						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
 						<li><a href="cat/Rust-10.html" title="Rust-10-Packages、Crates、Modules、Path"  target="_blank">Rust-10-Packages、Crates、Modules、Path</a></li>
 						<li><a href="cat/Rust-11.html" title="Rust-11-Vector、String、HashMap"  target="_blank">Rust-11-Vector、String、HashMap</a></li>
+						<li><a href="cat/Rust-12.html" title="Rust-12-错误处理"  target="_blank">Rust-12-错误处理</a></li>
 					</ul>
 				</div>
 				<!-- 分类文章列表 扩展模块
@@ -167,6 +168,7 @@
 						<li><a href="cat/Rust-9.html" title="Rust-9-枚举"  target="_blank">Rust-9-枚举</a></li>
 						<li><a href="cat/Rust-10.html" title="Rust-10-Packages、Crates、Modules、Path"  target="_blank">Rust-10-Packages、Crates、Modules、Path</a></li>
 						<li><a href="cat/Rust-11.html" title="Rust-11-Vector、String、HashMap"  target="_blank">Rust-11-Vector、String、HashMap</a></li>
+						<li><a href="cat/Rust-12.html" title="Rust-12-错误处理"  target="_blank">Rust-12-错误处理</a></li>
 					</ul>
 					<div class="clearfix"></div>
 				</div>
