--- a/cat/Rust-2.html
+++ b/cat/Rust-2.html
@@ -312,7 +312,7 @@
 					["b", "c", "d", "e"]
 					</pre>
 
-					<p>注：在println中{:?}与{:#?}都能打印出对应变量的数据结构，后者更加的直观。</p>
+					<p>注：在println中{:?}与{:#?}都以调试的方式能打印出对应变量的数据结构，后者更加的直观。</p>
 
 					<!-- /正文 -->
 
