--- a/cat/Rust-3.html
+++ b/cat/Rust-3.html
@@ -158,7 +158,7 @@
 					<p>提前使用return来返回值：</p>
 					<pre class="brush: c;">
 					fn main() {
-					    let list_1:[i32]=[1,2,3,4,5,6];
+					    let list_1:[i32;6]=[1,2,3,4,5,6];
 					    let guess_1:i32=0;
 					    let guess_2:i32=6;
 					    //将列表以引用的方式传给find_value函数，再传入一个我们猜测的数字
