--- a/cat/Rust-11.html
+++ b/cat/Rust-11.html
@@ -238,7 +238,7 @@
 					    //加号前面的类型是一个String，加号后面的类型必须是一个引用的字符串类型或&str
 					    let mut s_5=s_3+s_4;
 					    println!("{}",s_5);
-					    //此时再调用s_3就会报错，因为加号前面的s_3被传入了Rust的add函数中，所有权也一并被带走，而s_4本身是一个&str，所以add函数并不会回去它的所有权
+					    //此时再调用s_3就会报错，因为加号前面的s_3被传入了Rust的add函数中，所有权也一并被带走，而s_4本身是一个&str，所以add函数并不会获取它的所有权
 					    //println!("{}",s_3);
 
 					    //当加号后面是一个String时，需要在String类型前面添加引用符号
@@ -311,7 +311,7 @@
 					//这是因为字符串中的字母是西里尔字母，每个字符都需要两个字节来储存
 					</pre>
 
-					<p>当我们再通过索引去访问这个字符串的时候，s1[0]代表的就只是这段西里尔字符串第一个字母的前半部分，而s1[0]+s1[1]才代表了这个字符'З'，但在英文字符环境下，纯英文的单个字符又被储存在单个byte里，这种存储上的差异，会出现读取上的bug，所以Rust并没有提供这种会导致bug的字符串索引方式。</p>
+					<p>当我们再通过索引去访问这个字符串的时候，s1[0]代表的就只是这段西里尔字符串第一个字母的前半部分，而s1[0]+s1[1]才代表了这个字符'З'，但在英文字符环境下，纯英文的单个字符又被储存在单个byte里，这种存储上的差异，会出现读取上的bug，所以Rust语言的设计者在设计时，并没有提供这种会导致bug的字符串索引方式。</p>
 					<p>除此之外，Rust不支持String索引的另外一个重要原因，是因为字符串索引效率很低。</p>
 
 					<p>对于字符串，可以使用下面两种方式来索引：</p>
@@ -356,9 +356,7 @@
 					    let s1="Здравствуйте".to_string();
 					    
 					    for s in s1.chars() {
-					        if s == 'д' {
-					            println!("{}", s);
-					        }
+					        println!("{}", s);
 					    }
 					}
 
@@ -419,7 +417,7 @@
 
 					fn main() {
 						//创建一个HashMap实例
-					    let hmp=HashMap::new();
+					    let mut hmp=HashMap::new();
 
 					    //向这个实例添加两个键值对，键都为整数型，值都为String类型
 					    hmp.insert(1,"NikkoCat".to_string());
